manifests/destinationrule.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-destrule
spec:
  host: app
  subsets:
    - name: stable
      labels:
        app: backend
    - name: canary
      labels:
        app: backend
