manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: app.default.svc
  name: app
spec:
  ingressClassName: nginx
  rules:
    - host: app.31.184.210.137.sslip.io
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app.31.184.210.137.sslip.io
      secretName: app-tls
